searching by a group of keywords
